# agent-race

./: .env.example  .gitignore  README.md  llm_endpoints.py  pyproject.toml
deploy/: agent-race.service  nginx-agent-race.conf
prompts/: root_agent.md
prompts/subagents/: backtester.md  researcher.md  risk_officer.md  strategist.md
src/agent_race/: cli.py  config.py  scheduler.py
src/agent_race/agents/: __init__.py  protocol.py  root_agent.py
src/agent_race/llm/: __init__.py  client.py  rate_limiter.py
src/agent_race/memory/: __init__.py  store.py
src/agent_race/tools/: __init__.py  borrow_data.py  execution.py  market_data.py
src/agent_race/web/: app.py
tests/: test_execution.py  test_protocol.py  test_scheduler_config.py
