[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-race"
version = "0.1.0"
description = "LLM agent arena for crypto arbitrage research"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "httpx==0.28.1",
  "pydantic==2.10.4",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[project.scripts]
agent-race = "agent_race.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
